[package]
name = "imatree"
version = "0.1.0"
edition = "2021"
description = "A simple command line tool to generate aesthetically pleasing (and sometimes not so pleasing) images of whatever string you want."
license = "MIT"
repository = "https://github.com/samgj18/imatree"
readme = "README.md"
authors = ["Samuel <swe@samuelgomez.co>"]
keywords = ["image", "text", "cli", "art", "png"]
categories = ["cli", "graphics", "text-processing"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
image = "0.24.6"
num-complex = "0.4.3"
text-to-png = "0.2.0"
